# Call-me-too

./: Makefile  README.md  pyproject.toml
src/: __init__.py  __main__.py  config.py  parser.py
