[project]
name = "call-me-maybe"
description = "Introduction to function calling in LLMs"
version = "1.0.0"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
  "pydantic>=2.12.5",
  "numpy>=2.2.6",
  "transformers>=4.57.6",
  "huggingface_hub"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
